spring.cloud.config.username + password set at application.yaml

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,6 +12,8 @@ spring:
     config:
       discovery:
         serviceId: ead-config-server
+      username: configServerClient
+      password: 'secretead123cs'
   datasource:
     url:  jdbc:postgresql://localhost:5432/ead-notification-v2
     username: postgres
